trys to fix button styles on mobile

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -172,7 +172,7 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  color: #4A4A4A;
   text-align: center;
   font-family: 'Lato', sans-serif !important;
   font-size: 1.2em;
@@ -194,17 +194,16 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: #333;
-  border-color: #888;
+  color: #4A4A4A;
+  border-color: none;
   outline: 0; }
 .button.button-primary,
 button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
-  color: #FFF;
-  background-color: #33C3F0;
-  border-color: #33C3F0; }
+  color: #4A4A4A;
+  background-color: #FFDD59;}
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
@@ -215,9 +214,8 @@ button.button-primary:focus,
 input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
-  color: #FFF;
-  background-color: #1EAEDB;
-  border-color: #1EAEDB; }
+  color: #4A4A4A;
+  background-color: #FFDD59; }
 
 
 /* Forms
